WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185301
[LFC] Set the invalidation root as the result of style change.
https://bugs.webkit.org/show_bug.cgi?id=185301
Summary
[LFC] Set the invalidation root as the result of style change.
alan
Reported
2018-05-04 07:49:15 PDT
ssia
Attachments
Patch
(9.34 KB, patch)
2018-05-04 08:01 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.63 KB, patch)
2018-05-04 09:14 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-05-04 08:01:31 PDT
Created
attachment 339544
[details]
Patch
Antti Koivisto
Comment 2
2018-05-04 08:13:26 PDT
Comment on
attachment 339544
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=339544&action=review
> Source/WebCore/layout/inlineformatting/InlineInvalidation.h:46 > - static void invalidate(const Box&, StyleDiff, LayoutContext&, InlineFormattingState&); > + static const Container* invalidate(const Box&, StyleDiff, LayoutContext&, InlineFormattingState&);
It is bit unclear what the return value is here. Maybe 'invalidateAndComputeRoot' or something? Or just a comment.
alan
Comment 3
2018-05-04 09:14:34 PDT
Created
attachment 339549
[details]
Patch
WebKit Commit Bot
Comment 4
2018-05-04 09:30:34 PDT
Comment on
attachment 339549
[details]
Patch Clearing flags on attachment: 339549 Committed
r231355
: <
https://trac.webkit.org/changeset/231355
>
WebKit Commit Bot
Comment 5
2018-05-04 09:30:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-05-04 09:31:20 PDT
<
rdar://problem/39978603
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug